[package]
name = "custom"
license = "MIT"
version = "0.1.0"
edition = "2021"
authors = ["Leonardo Tosetto <leonardo.a.tosetto@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
